# ai-500-prod

./: .gitignore  API_REFERENCE.md  DAILYMED_INTEGRATION.md  DEPLOYMENT.md  DEPLOY_READY.md  Dockerfile  FRONTEND_INTEGRATION.md  MULTI_MODAL_PILL_RECOGNITION.md  NEXT_STEPS.md  PRODUCTION.env  PROGRESS.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT.md  RENDER_PRO_GUIDE.md  TRAINING_WITH_DAILYMED.md  render.yaml  test_api.ps1
backend/: .dockerignore  .env.example  .gitignore  AI_DATA_SEEDING.md  DOCKER.md  Dockerfile  MODEL_TRAINING_GUIDE.md  MODEL_USAGE.md  NEGATIVE_TEST_ANALYSIS.md  NEGATIVE_TEST_IMPROVEMENTS.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READY.md  PRODUCTION_SEEDING.md  QUICK_START_SEEDING.md  README.md  RENDER_CHECKLIST.md  RENDER_DEPLOYMENT.md  RENDER_SUMMARY.md  SCANNER_NEGATIVE_CASES.md  alembic.ini  build.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.prod.txt  requirements.txt  reseed_barcodes.py  start.sh  test_ai_enhancements.py  test_barcode.py  test_models.py  test_price_anomaly.py  test_scan.py
backend/alembic/: env.py
backend/alembic/versions/: 20241205_1000_multi_modal_fields.py  20251204_0406_0ff7c5c33b2a_initial_migration.py  20251209_1050_05c10e97e228_add_ai_enhancements_tables.py  20251210_remove_duplicate_shape.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/docker/: init_db.ps1  init_db.sh  seed_db.sh  start.sh
backend/models/: autoencoder_price_anomaly.pt  drug_interaction.pkl  price_anomaly.pkl
backend/nginx/: nginx.conf
(+89 files in other folders)
